[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_acton"
dist-name = "yaqd-acton"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://gitlab.com/yaq/yaqd-acton"
requires-python = ">3.7"
requires = ["yaqd-core>=2020.06.2", "pyserial"]
description-file="README.md"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-acton-2150i = "yaqd_acton._acton_2150i:Acton2150I.main"
yaqd-acton-sp2300i = "yaqd_acton._acton_sp2300i:ActonSP2300i.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
